--- a/SweetDreams/SweetDreams.Admin/Pages/Registros/R_Clientes.razor
+++ b/SweetDreams/SweetDreams.Admin/Pages/Registros/R_Clientes.razor
@@ -8,7 +8,7 @@
 @inject HttpClient Http
 @inject IToastService toast
 
-<EditForm Model="cliente">
+<EditForm Model="cliente" OnValidSubmit="Guardar">
     <DataAnnotationsValidator />
     <div class="card">
         <div class="card-header">
@@ -72,7 +72,7 @@
         <div class="card-footer">
             <div class="form-group text-center" display: inline-block>
                 <button type="button" class="btn btn-lg btn-primary oi oi-file" @onclick="Nuevo"> Nuevo</button>
-                <button type="submit" class="btn btn-lg btn-success oi oi-cloud-upload" @onclick="Guardar"> Guardar</button>
+                <button type="submit" class="btn btn-lg btn-success oi oi-cloud-upload"> Guardar</button>
                 <button type="button" class="btn btn-lg btn-danger oi oi-trash" @onclick="Eliminar"> Eliminar</button>
             </div>
         </div>
@@ -133,6 +133,11 @@
 
     private async Task Guardar()
     {
+        if (await UsuarioCorreoExistente())
+        {
+            return;
+        }
+
         if (cliente.Clave == Confirmacion)
         {
             var guardado = await Http.PostAsJsonAsync("http://localhost:5000/Api/Clientes", cliente);
@@ -153,6 +158,28 @@
             toast.ShowWarning("La Clave no coinciden");
             Confirmacion = string.Empty;
         }
+    }
+
+    private async Task<bool> UsuarioCorreoExistente()
+    {
+        var ListaClientes = (await Http.GetFromJsonAsync<Clientes[]>($"http://localhost:5000/Api/Clientes")).ToList();
+
+        foreach(var item in ListaClientes)
+        {
+            if (item.NombreUsuario == cliente.NombreUsuario)
+            {
+                toast.ShowWarning("Usuario existente");
+                return true;
+            }
+
+            if (item.Correo == cliente.Correo)
+            {
+                toast.ShowWarning("Correo existente");
+                return true;
+            }
+        }
+
+        return false;
     }
 
     private async Task Eliminar()
