agregando boton remover en el registro de reservacion en el lado admin

--- a/SweetDreams/SweetDreams.Client/Pages/Registros Clientes/RegistroCliente.razor
+++ b/SweetDreams/SweetDreams.Client/Pages/Registros Clientes/RegistroCliente.razor
@@ -8,7 +8,7 @@
 @inject HttpClient Http
 @inject IToastService toast
 
-<EditForm Model="cliente" OnValidSubmit="Guardar">
+<EditForm Model="cliente" OnValidSubmit="Registrarse">
     <DataAnnotationsValidator />
     <div class="card">
         <div class="card-header">
