acentuacion en la consulta de habitaciones de la parte admin

--- a/SweetDreams/SweetDreams.Admin/Pages/Consultas/C_Habitacion.razor
+++ b/SweetDreams/SweetDreams.Admin/Pages/Consultas/C_Habitacion.razor
@@ -8,7 +8,7 @@
 
 <div class="card-img">
     <div class="card-header">
-        <h1>Consulta de Habitacion</h1>
+        <h1>Consulta de Habitación</h1>
     </div>
 
     <div class="card-body">
@@ -69,7 +69,7 @@
                             <th>Habitación ID</th>
                             <th>Numero Habitación</th>
                             <th>Tipo</th>
-                            <th>Caracteriscas</th>
+                            <th>Caracteríscas</th>
                             <th>Precio</th>
                             <th>Estado</th>
                             <th>Foto</th>
