Trabajando en la galeria

--- a/SweetDreams/SweetDreams.Client/Shared/NavMenu.razor
+++ b/SweetDreams/SweetDreams.Client/Shared/NavMenu.razor
@@ -18,6 +18,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="RegistroCliente">Clientes</a>
                     <a class="dropdown-item" href="RReservaciones">Reservaciones</a>
+                    <a class="dropdown-item" href="galeria">Galeria</a>
 
                 </div>
             </li>
