--- a/SweetDreams/SweetDreams.Clients/Pages/Habitaciones/HabitacionSimple.razor
+++ b/SweetDreams/SweetDreams.Clients/Pages/Habitaciones/HabitacionSimple.razor
@@ -1,17 +1,24 @@
 ﻿@page "/HabitacionSimple"
 
 <div class="card">
-    <div class="card-header row justify-content-md-center">
+    <div class="card-header text-center">
         <h1>Habitacion Simple</h1>
     </div>
     <div class="card-body text-center">
-        <img src="../Resources/collage.jpg" style="width:50%; height:200px" />
+        <img src="../Resources/Sencilla.jpg"  style="width:50%; height:250px" />
+        
     </div>
     <div class="card-footer text-center">
 
         <p>
             Esta habitacion es especial para las personas que quieren desconectar de todos,
-            esta diseñada para un solo huesped ya que cuena con una cama individual  
+            esta diseñada para un solo huesped ya que cuenta con una cama individual la
+            que favorece para las personas tranquilas y solitarias.
+        </p>
+        <p>    
+            En esta habitacion podras encontrar un baño moderno color blanco coral, ademas
+            de una television plasma y una mini neverita que estara llena de un delicioso
+            yogurt con frutas, unas cuantas cervezas y una botella de agua.
 
         </p>
     </div>
