cambio en las consultas de numeros para limpiar la lista en caso de excepcion.

--- a/SweetDreams/SweetDreams.Admin/Pages/Consultas/C_Actividades.razor
+++ b/SweetDreams/SweetDreams.Admin/Pages/Consultas/C_Actividades.razor
@@ -140,6 +140,7 @@
                     catch (FormatException)
                     {
                         toast.ShowWarning("Ingrese un numero");
+                        ListaActividades.Clear();
                     }
                 }
                 else
