--- a/SweetDreams/SweetDreams.Admin/Pages/Consultas/C_Clientes.razor
+++ b/SweetDreams/SweetDreams.Admin/Pages/Consultas/C_Clientes.razor
@@ -106,6 +106,7 @@
                     catch (FormatException)
                     {
                         toast.ShowWarning("Ingrese un numero");
+                        ListaClientes.Clear();
                     }
                 }
                 else
