--- a/SweetDreams/SweetDreams.Admin/Pages/Consultas/C_Habitacion.razor
+++ b/SweetDreams/SweetDreams.Admin/Pages/Consultas/C_Habitacion.razor
@@ -111,6 +111,7 @@
                     catch (FormatException)
                     {
                         toast.ShowWarning("Ingrese un numero");
+                        ListaHabitacion.Clear();
                     }
                 }
                 else
@@ -159,6 +160,7 @@
                     catch (FormatException)
                     {
                         toast.ShowWarning("Ingrese un numero");
+                        ListaHabitacion.Clear();
                     }
                 }
                 else
