--- a/SweetDreams/SweetDreams.Admin/Pages/Consultas/C_Reservaciones.razor
+++ b/SweetDreams/SweetDreams.Admin/Pages/Consultas/C_Reservaciones.razor
@@ -143,6 +143,7 @@
                     catch (FormatException)
                     {
                         toast.ShowWarning("Ingrese un numero");
+                        ListaReservaciones.Clear();
                     }
                 }
                 else
@@ -161,6 +162,7 @@
                     catch (FormatException)
                     {
                         toast.ShowWarning("Ingrese un numero");
+                        ListaReservaciones.Clear();
                     }
                 }
                 else
