Habitaciones del Sistema

--- a/SweetDreams/SweetDreams.Clients/Pages/Habitaciones/HabitacionDoble.razor
+++ b/SweetDreams/SweetDreams.Clients/Pages/Habitaciones/HabitacionDoble.razor
@@ -12,13 +12,15 @@
 
         <p>
             Esta habitación es más grande y de capacidad superior. En este tipo de habitaciones
-            dispuestas para dos personas puede haber dos camas independientes o una cama de matrimonio.
-
+            dispuestas para los enamorados o dos personas que quieren pasar un buen rato en nuestro
+            hotel. Las camas se pueden escoger individuales o compartir una matrimonial para ambos.
+            Esta habitacion es especial para amistades o parejas que quieren divertirse.
         </p>
         <p>
             En esta habitacion podras encontrar un baño moderno color blanco coral y azul oscuro, ademas
-            de una television plasma y una mini neverita que estara llena de un delicioso
-            yogurt con frutas, unas cuantas cervezas, un par de latas e coca-cola y una botella de agua.
+            de una mini sala donde podran de disfrutar de todo el catalago que ofrecemos en nuestra gran tv.
+            Aparte de lo ya mencionado tiene un balcon con vista al mar para poder apreciar la hermosura
+            de las olas junto al atardecer.
 
         </p>
     </div>
