--- a/SweetDreams/SweetDreams.Clients/Pages/Registros Clientes/Galeria/Catalogo.razor
+++ b/SweetDreams/SweetDreams.Clients/Pages/Registros Clientes/Galeria/Catalogo.razor
@@ -1,47 +1,51 @@
 ﻿@page "/Galeria"
 
-<h3>Catalogo</h3>
-
-<div class="col col-auto">
-
-    <div class="card" style="width: 500px;margin: auto;">
-        <img src="~/Resources/master1 suite.jpg" class="card-img-top" />
-        <div class="card-body">
-            <div class="text-center">
-                <h5> Habitación Master Suite </h5>
-                <a href="Renta" class="btn btn-outline-primary">Información de Habitación</a>
-            </div>
+    <div class="card">
+        <div class="card-header">
+            <h3>Tipos de Habitaciones</h3>
         </div>
-    </div>
+        <div class="col col-auto">
+            <div class="form-row align-items-center">
+                <div class="card" style="width: 500px;margin: auto;">
+                    <img src="../Resources/master1 suite.jpg" style="width:100%; height:300px" />
+                    <div class="card-body">
+                        <div class="text-center">
+                            <h5> Habitación Master Suite </h5>
+                            <a href="HabitacionSuite" class="btn btn-outline-primary">Información de Habitación</a>
+                        </div>
+                    </div>
+                </div>
 
-    <div class="card" style="width: 500px;margin: auto;">
-        <img src="~/Resources/junior-suite-private-pool.jpg" class="card-img-top" />
-        <div class="card-body">
-            <div class="text-center">
-                <h5> Habitación Junior Suite </h5>
-                <a href="Renta" class="btn btn-outline-primary">Información de Habitación</a>
+                <div class="card" style="width: 500px;margin: auto;">
+                    <img src="../Resources/junior-suite-private-pool.jpg" style="width:100%; height:300px"/>
+                    <div class="card-body">
+                        <div class="text-center">
+                            <h5> Habitación Junior Suite </h5>
+                            <a href="HabitacionSuiteJunior" class="btn btn-outline-primary">Información de Habitación</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
+            <div class="form-row align-items-center">
+                <div class="card" style="width: 500px;margin: auto;">
+                    <img src="../Resources/Doble.jpg" style="width:100%; height:300px" />
+                    <div class="card-body">
+                        <div class="text-center">
+                            <h5> Habitación Doble </h5>
+                            <a href="HabitacionDoble" class="btn btn-outline-primary">Información de Habitación</a>
+                        </div>
+                    </div>
+                </div>
 
-    <div class="card" style="width: 500px;margin: auto;">
-        <img src="~/Resources/Doble.jpg" class="card-img-top" />
-        <div class="card-body">
-            <div class="text-center">
-                <h5> Habitación Doble </h5>
-                <a href="Renta" class="btn btn-outline-primary">Información de Habitación</a>
+                <div class="card" style="width: 500px;margin: auto;">
+                    <img src="../Resources/Sencilla.jpg" style="width:100%; height:300px" />
+                    <div class="card-body">
+                        <div class="text-center">
+                            <h5> Habitación Sencilla </h5>
+                            <a href="HabitacionSimple" class="btn btn-outline-primary">Información de Habitación</a>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-    </div>
-
-    <div class="card" style="width: 500px;margin: auto;">
-        <img src="~/Resources/Sencilla.jpg" class="card-img-top" />
-        <div class="card-body">
-            <div class="text-center">
-                <h5> Habitación sencilla </h5>
-                <a href="Renta" class="btn btn-outline-primary">Información de Habitación</a>
-            </div>
-        </div>
-    </div>
-
-</div>
+      </div>
+ </div>
