--- a/SweetDreams/SweetDreams.Clients/Pages/Habitaciones/HabitacionSimple.razor
+++ b/SweetDreams/SweetDreams.Clients/Pages/Habitaciones/HabitacionSimple.razor
@@ -5,22 +5,25 @@
         <h1>Habitacion Simple</h1>
     </div>
     <div class="card-body text-center">
-        <img src="../Resources/Sencilla.jpg"  style="width:50%; height:250px" />
-        
-    </div>
-    <div class="card-footer text-center">
-
+        <img src="../Resources/Sencilla.jpg" style="width:50%; height:300px" />
+        &nbsp;
+        &nbsp;
+        &nbsp;
         <p>
-            Esta habitacion es especial para las personas que quieren desconectar de todos,
+            Esta habitación es especial para las personas que quieren desconectar de todos,
             esta diseñada para un solo huesped ya que cuenta con una cama individual la
             que favorece para las personas tranquilas y solitarias.
         </p>
-        <p>    
-            En esta habitacion podras encontrar un baño moderno color blanco coral, ademas
+        <p>
+            En esta habitación podras encontrar un baño moderno color blanco coral, ademas
             de una television plasma y una mini neverita que estara llena de un delicioso
             yogurt con frutas, unas cuantas cervezas y una botella de agua.
 
         </p>
+
+    </div>
+    <div class="card-footer text-center">
+        <a class="btn btn-outline-primary" href="/Galeria" >Volver a Galeria</a>  
     </div>
 </div>
 
