--- a/SweetDreams/SweetDreams.Clients/Shared/NavMenu.razor
+++ b/SweetDreams/SweetDreams.Clients/Shared/NavMenu.razor
@@ -11,6 +11,9 @@
             <li class="nav-item active">
                 <a class="nav-link" href="">Inicio <span class="sr-only">(current)</span></a>
             </li>
+            <li class="nav-item active">
+                <a class="nav-link "  href="Galeria ">Galeria</a>
+            </li>
             <li class="nav-item dropdown active">
                 <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Registros
@@ -18,8 +21,7 @@
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="RegistroCliente">Clientes</a>
                     <a class="dropdown-item" href="RReservaciones">Reservaciones</a>
-                    <a class="dropdown-item" href="Galeria ">Galeria</a>
-
+                   
                 </div>
             </li>
 
