--- a/SweetDreams/SweetDreams.Clients/Pages/Habitaciones/HabitacionSimple.razor
+++ b/SweetDreams/SweetDreams.Clients/Pages/Habitaciones/HabitacionSimple.razor
@@ -2,13 +2,12 @@
 
 <div class="card">
     <div class="card-header text-center">
-        <h1>Habitacion Simple</h1>
+        <h1>Habitación Simple</h1>
     </div>
     <div class="card-body text-center">
         <img src="../Resources/Sencilla.jpg" style="width:50%; height:300px" />
-        &nbsp;
-        &nbsp;
-        &nbsp;
+        <p />
+        <p />
         <p>
             Esta habitación es especial para las personas que quieren desconectar de todos,
             esta diseñada para un solo huesped ya que cuenta con una cama individual la
