--- a/SweetDreams/SweetDreams.Clients/Pages/Habitaciones/HabitacionSuite.razor
+++ b/SweetDreams/SweetDreams.Clients/Pages/Habitaciones/HabitacionSuite.razor
@@ -2,25 +2,30 @@
 
 <div class="card">
     <div class="card-header text-center">
-        <h1>Habitacion Doble</h1>
+        <h1>Habitación Suite Master</h1>
     </div>
     <div class="card-body text-center">
-        <img src="../Resources/master1 suite.jpg" style="width:50%; height:250px" />
-    </div>
-    <div class="card-footer text-center">
+        <img src="../Resources/master1 suite.jpg" style="width:50%; height:300px" />
+        <p />
+        <p />
 
         <p>
             Esta habitación es la mas lujosa del hotel. En este tipo de habitaciones
-            dispuestas para los recien casados o para personas que quieren disfrutar de los 
-            lujosos servicios que esta ofrece. En esta habitacion siempre sentiras que estas 
+            dispuestas para los recien casados o para personas que quieren disfrutar de los
+            lujosos servicios que esta ofrece. En esta habitacion siempre sentiras que estas
             en el paraiso ya que tiene las mejores comodidades para cada una de tus necesidades.
         </p>
         <p>
             En esta habitación podras encontrar un jacuzzi con vista al mar, siempre tendras
-            disponible de forma gratuita todos los servicios a la habitación, posee aparte una sala, 
-            un comedor y un mini bar donde podras contratar a un personal del staff para preparar 
-            todas tus bebidas. 
+            disponible de forma gratuita todos los servicios a la habitación, posee aparte una sala,
+            un comedor y un mini bar donde podras contratar a un personal del staff para preparar
+            todas tus bebidas.
         </p>
+
+
+    </div>
+    <div class="card-footer text-center">
+        <a class="btn btn-outline-primary" href="/Galeria">Volver a Galeria</a>
     </div>
 </div>
 
