--- a/SweetDreams/SweetDreams.Clients/Pages/Habitaciones/HabitacionSuiteJunior.razor
+++ b/SweetDreams/SweetDreams.Clients/Pages/Habitaciones/HabitacionSuiteJunior.razor
@@ -2,12 +2,12 @@
 
 <div class="card">
     <div class="card-header text-center">
-        <h1>Habitacion Doble</h1>
+        <h1>Habitación Suite Junior</h1>
     </div>
     <div class="card-body text-center">
-        <img src="../Resources/junior-suite-private-pool.jpg" style="width:50%; height:250px" />
-    </div>
-    <div class="card-footer text-center">
+        <img src="../Resources/junior-suite-private-pool.jpg" style="width:50%; height:300px" />
+        <p />
+        <p />
 
         <p>
             Esta habitación es la mas lujosa del hotel. En este tipo de habitaciones
@@ -17,10 +17,14 @@
         </p>
         <p>
             En esta habitación podras encontrar un jacuzzi con vista al mar, un minicomedor
-            siempre tendras disponible de forma gratuita todos los servicios a la habitación 
-            y un mini bar donde podras contratar a un personal del staff para preparar todas 
+            siempre tendras disponible de forma gratuita todos los servicios a la habitación
+            y un mini bar donde podras contratar a un personal del staff para preparar todas
             tus bebidas.
         </p>
+    </div>
+    <div class="card-footer text-center">
+
+        <a class="btn btn-outline-primary" href="/Galeria">Volver a Galeria</a>
     </div>
 </div>
 
