--- a/SweetDreams/SweetDreams.Clients/Pages/Habitaciones/HabitacionDoble.razor
+++ b/SweetDreams/SweetDreams.Clients/Pages/Habitaciones/HabitacionDoble.razor
@@ -2,13 +2,12 @@
 
 <div class="card">
     <div class="card-header text-center">
-        <h1>Habitacion Doble</h1>
+        <h1>Habitación Doble</h1>
     </div>
     <div class="card-body text-center">
-        <img src="../Resources/Doble.jpg" style="width:50%; height:250px" />
-        
-    </div>
-    <div class="card-footer text-center">
+        <img src="../Resources/Doble.jpg" style="width:50%; height:300px" />
+        <p />
+        <p />
 
         <p>
             Esta habitación es más grande y de capacidad superior. En este tipo de habitaciones
@@ -17,12 +16,16 @@
             Esta habitacion es especial para amistades o parejas que quieren divertirse.
         </p>
         <p>
-            En esta habitacion podras encontrar un baño moderno color blanco coral y azul oscuro, ademas
+            En esta habitación podras encontrar un baño moderno color blanco coral y azul oscuro, ademas
             de una mini sala donde podran de disfrutar de todo el catalago que ofrecemos en nuestra gran tv.
             Aparte de lo ya mencionado tiene un balcon con vista al mar para poder apreciar la hermosura
             de las olas junto al atardecer.
 
         </p>
+
+    </div>
+    <div class="card-footer text-center">
+        <a class="btn btn-outline-primary" href="/Galeria">Volver a Galeria</a>
     </div>
 </div>
 @code {
