--- a/SweetDreams/SweetDreams.Clients/Pages/Habitaciones/HabitacionSimple.razor
+++ b/SweetDreams/SweetDreams.Clients/Pages/Habitaciones/HabitacionSimple.razor
@@ -2,7 +2,7 @@
 
 <div class="card">
     <div class="card-header text-center">
-        <h1>Habitación Simple</h1>
+        <h1>Habitación Individual</h1>
     </div>
     <div class="card-body text-center">
         <img src="../Resources/Sencilla.jpg" style="width:50%; height:500px" />
