--- a/SweetDreams/SweetDreams.Clients/Pages/Registros Clientes/Galeria/Catalogo.razor
+++ b/SweetDreams/SweetDreams.Clients/Pages/Registros Clientes/Galeria/Catalogo.razor
@@ -41,7 +41,7 @@
                     <img src="../Resources/Sencilla.jpg" style="width:100%; height:300px" />
                     <div class="card-body">
                         <div class="text-center">
-                            <h5> Habitación Sencilla </h5>
+                            <h5> Habitación Individual </h5>
                             <a href="HabitacionSimple" class="btn btn-outline-primary">Información de Habitación</a>
                         </div>
                     </div>
