Se agrego el boton GenerarReporte consultaClientes

--- a/SweetDreams/SweetDreams.Admin/Pages/Consultas/C_Clientes.razor
+++ b/SweetDreams/SweetDreams.Admin/Pages/Consultas/C_Clientes.razor
@@ -65,6 +65,19 @@
             </div>
         </form>
     </div>
+
+    <div class="card-footer">
+            <div class="form-group text-center">
+                <button target="_blank" class="btn btn-lg btn-primary oi oi-file"> Generar Reporte</button>
+            </div>
+
+             @* <form>
+                @if (Data is { })
+                {
+                    <object data="@pdfContent" width="1000" height="500"></object>
+                }
+            </form> *@
+        </div>
 </div>
 
 @code
