* C_Clientes.razor: * C_Habitacion.razor: * C_Reservaciones.razor: * ReporteHabitaciones.cs:
* Proyecto.db: Se arreglo el reporte de habitacion, Ya funciona
  perfectamente

--- a/SweetDreams/SweetDreams.Admin/Pages/Consultas/C_Reservaciones.razor
+++ b/SweetDreams/SweetDreams.Admin/Pages/Consultas/C_Reservaciones.razor
@@ -98,7 +98,7 @@
 
         <div class="card-footer">
             <div class="form-group text-center">
-                <button target="_blank" class="btn btn-lg btn-primary oi oi-file" @onclick="GenerarReporte"> Generar Reporte</button>
+                <button class="btn btn-lg btn-primary oi oi-file" @onclick="GenerarReporte"> Generar Reporte</button>
             </div>
 
             <form>
