--- a/SweetDreams/SweetDreams.Admin/Pages/Consultas/C_Actividades.razor
+++ b/SweetDreams/SweetDreams.Admin/Pages/Consultas/C_Actividades.razor
@@ -2,98 +2,112 @@
 
 @using Models
 @using System.Net.Http
+@using Reportes
 
 @inject HttpClient Http
 @inject IToastService toast
 
-<div class="card-img">
-    <div class="card-header">
-        <h1>Consulta de Actividades</h1>
-    </div>
+    <div class="card-img">
+        <div class="card-header">
+            <h1>Consulta de Actividades</h1>
+        </div>
 
-    <div class="card-body">
-        <form>
-            <div class="form-row">
-                <div class="form-group">
-                    <label>Filtrar por Fecha</label>
-                    <select class="form-control" @bind="FiltroFecha">
-                        <option value="0">Todo</option>
-                        <option value="1">Fecha</option>
-                    </select>
-                </div>
-                &nbsp;
-                <div class="form-group">
-                    <label>Desde</label>
-                    <input type="date" @bind="Desde" class="form-control" />
-                </div>
-                &nbsp;
-                <div class="form-group">
-                    <label>Hasta</label>
-                    <input type="date" @bind="Hasta" class="form-control" />
-                </div>
-                &nbsp;
-                &nbsp;
-                &nbsp;
-                &nbsp;
-                &nbsp;
-                &nbsp;
-                &nbsp;
-                &nbsp;
-                <div class="form-group">
-                    <label>Filtro</label>
-                    <select class="form-control" @bind="Filtro">
-                        <option value="0">Todo</option>
-                        <option value="1">ActividadId</option>
-                        <option value="2">Nombre Actividad</option>
-                        <option value="3">Lugar</option>
-                    </select>
-                </div>
-                &nbsp;
-                <div class="form-group">
-                    <label>Criterio</label>
-                    <div class="input-group">
-                        <input type="text" @bind="Criterio" class="form-control">
-                        <div class="input-group-append">
-                            <button type="button" class="btn btn-primary input-group-text" @onclick="@(u => Consultar())"><i class="oi oi-list-rich" /> Consultar</button>
+        <div class="card-body">
+            <form>
+                <div class="form-row">
+                    <div class="form-group">
+                        <label>Filtrar por Fecha</label>
+                        <select class="form-control" @bind="FiltroFecha">
+                            <option value="0">Todo</option>
+                            <option value="1">Fecha</option>
+                        </select>
+                    </div>
+                    &nbsp;
+                    <div class="form-group">
+                        <label>Desde</label>
+                        <input type="date" @bind="Desde" class="form-control" />
+                    </div>
+                    &nbsp;
+                    <div class="form-group">
+                        <label>Hasta</label>
+                        <input type="date" @bind="Hasta" class="form-control" />
+                    </div>
+                    &nbsp;
+                    &nbsp;
+                    &nbsp;
+                    &nbsp;
+                    &nbsp;
+                    &nbsp;
+                    &nbsp;
+                    &nbsp;
+                    <div class="form-group">
+                        <label>Filtro</label>
+                        <select class="form-control" @bind="Filtro">
+                            <option value="0">Todo</option>
+                            <option value="1">ActividadId</option>
+                            <option value="2">Nombre Actividad</option>
+                            <option value="3">Lugar</option>
+                        </select>
+                    </div>
+                    &nbsp;
+                    <div class="form-group">
+                        <label>Criterio</label>
+                        <div class="input-group">
+                            <input type="text" @bind="Criterio" class="form-control">
+                            <div class="input-group-append">
+                                <button type="button" class="btn btn-primary input-group-text" @onclick="@(u => Consultar())"><i class="oi oi-list-rich" /> Consultar</button>
+                            </div>
                         </div>
                     </div>
                 </div>
+
+                <div class="table-responsive text-nowrap">
+                    <table class="table table-striped">
+                        <thead class="thead-light">
+                            <tr>
+                                <th>ActividadId</th>
+                                <th>Nombre de Actividad</th>
+                                <th>Descripción</th>
+                                <th>Lugar</th>
+                                <th>Fecha</th>
+                                <th>Hora Inicio</th>
+                                <th>Hora Final</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody class="bg-white">
+                            @foreach (var item in ListaActividades)
+                            {
+                                <tr>
+                                    <td>@item.ActividadId</td>
+                                    <td>@item.NombreActividad</td>
+                                    <td>@item.Descripcion</td>
+                                    <td>@item.Lugar</td>
+                                    <td>@item.Fecha</td>
+                                    <td>@item.HoraInicio.ToString("hh:mm tt")</td>
+                                    <td>@item.HoraFinal.ToString("hh:mm tt")</td>
+                                    <td><a href="@($"RActividades/{item.ActividadId}")">Mostrar</a></td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </form>
+        </div>
+
+        <div class="card-footer">
+            <div class="form-group text-center">
+                <button class="btn btn-lg btn-primary oi oi-file" @onclick="GenerarReporte"> Generar Reporte</button>
             </div>
 
-            <div class="table-responsive text-nowrap">
-                <table class="table table-striped">
-                    <thead class="thead-light">
-                        <tr>
-                            <th>ActividadId</th>
-                            <th>Nombre de Actividad</th>
-                            <th>Descripción</th>
-                            <th>Lugar</th>
-                            <th>Fecha</th>
-                            <th>Hora Inicio</th>
-                            <th>Hora Final</th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody class="bg-white">
-                        @foreach (var item in ListaActividades)
-                        {
-                            <tr>
-                                <td>@item.ActividadId</td>
-                                <td>@item.NombreActividad</td>
-                                <td>@item.Descripcion</td>
-                                <td>@item.Lugar</td>
-                                <td>@item.Fecha</td>
-                                <td>@item.HoraInicio.ToString("hh:mm tt")</td>
-                                <td>@item.HoraFinal.ToString("hh:mm tt")</td>
-                                <td><a href="@($"RActividades/{item.ActividadId}")">Mostrar</a></td>
-                            </tr>
-                        }
-                    </tbody>
-                </table>
-            </div>
-        </form>
+            <form>
+                @if (Data is { })
+                {
+                    <object data="@pdfContent" width="1000" height="500"></object>
+                }
+            </form>
+        </div>
     </div>
-</div>
 
 @code
 {
@@ -106,6 +120,10 @@
     private string FiltroFecha { get; set; }
 
     public string Criterio { get; set; }
+
+    string pdfContent = "";
+
+    byte[] Data;
 
 
     protected override void OnInitialized()
@@ -178,5 +196,15 @@
                 ListaActividades = ListaActividades.Where(a => a.Fecha >= Desde && a.Fecha <= Hasta).ToList();
                 break;
         }
+    }
+
+     private void GenerarReporte()
+    {
+        ReporteActividades cliente = new ReporteActividades();
+
+        Data = cliente.Reporte(ListaActividades);
+
+        pdfContent = "data:application/pdf;base64,";
+        pdfContent += System.Convert.ToBase64String(Data);
     }
 }
