--- a/SweetDreams/SweetDreams.Clients/Shared/NavMenu.razor
+++ b/SweetDreams/SweetDreams.Clients/Shared/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#8ce273">
+﻿@inject IAuthenticationService AuthenticationService
+
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#8ce273">
     <a class="navbar-brand" href="">
         <img src="Resources\HotelPNG.png" style="width:35px;" />
         Sweet Dreams
@@ -32,6 +34,12 @@
                     <a class="dropdown-item" href="CActividades">Actividades</a>
                 </div>
             </li>
+            @if (AuthenticationService.cliente != null)
+            {
+                <li class="nav-item active">
+                    <a class="nav-link " href="logout ">LogOut</a>
+                </li>
+            }
         </ul>
     </div>
 </nav>
