--- a/SweetDreams/SweetDreams.Clients/_Imports.razor
+++ b/SweetDreams/SweetDreams.Clients/_Imports.razor
@@ -7,6 +7,8 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using SweetDreams.Clients
+@using SweetDreams.Clients.Helpers
+@using SweetDreams.Clients.Services
 @using SweetDreams.Clients.Shared
 @using Blazored.Toast
 @using Blazored.Toast.Services
