--- a/SweetDreams/SweetDreams.Clients/Shared/NavMenu.razor
+++ b/SweetDreams/SweetDreams.Clients/Shared/NavMenu.razor
@@ -32,6 +32,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="CActividades">Actividades</a>
+                    <a class="dropdown-item" href="CReservaciones">Reservaciones</a>
                 </div>
             </li>
             @if (AuthenticationService.cliente != null)
