--- a/SweetDreams/SweetDreams.Clients/Shared/NavMenu.razor
+++ b/SweetDreams/SweetDreams.Clients/Shared/NavMenu.razor
@@ -3,7 +3,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:#8ce273">
     <a class="navbar-brand" href="">
         <img src="Resources\HotelPNG.png" style="width:35px;" />
-        Sweet Dreams
+       Hotel SweetDreams 
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -21,9 +21,7 @@
                     Registros
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="RegistroCliente">Clientes</a>
                     <a class="dropdown-item" href="RReservaciones">Reservaciones</a>
-
                 </div>
             </li>
             <li class="nav-item dropdown active">
@@ -37,8 +35,14 @@
             </li>
             @if (AuthenticationService.cliente != null)
             {
-                <li class="nav-item active">
+                <li class="nav-item active" role="button">
                     <a class="nav-link " href="logout ">LogOut</a>
+                </li>
+            }
+            else
+            {
+                <li class="nav-item active" role="button" >
+                    <a class="nav-link " href="login">LogIn</a>
                 </li>
             }
         </ul>
